<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:keepScreenOn="true"
    tools:context=".ControlActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" />

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:showIn="@layout/activity_conn">

        <androidx.coordinatorlayout.widget.CoordinatorLayout
            android:id="@+id/constraintLayoutControlScanner"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone">

            <me.dm7.barcodescanner.zxing.ZXingScannerView
                android:id="@+id/scannerView"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center"
                android:background="#66ffffff">

                <CheckBox
                    android:id="@+id/checkBoxControlScannerReturn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp"
                    android:checked="true"
                    android:text="@string/send_return" />
            </LinearLayout>
        </androidx.coordinatorlayout.widget.CoordinatorLayout>

        <ScrollView
            android:id="@+id/linearLayoutControlKeyboard"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <CheckBox
                    android:id="@+id/checkBoxControlKeyboardSendImmediately"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:checked="true"
                    android:text="@string/send_immediately" />

                <LinearLayout
                    android:id="@+id/viewKeyboardInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:minHeight="24dp"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/show_or_hide_keyboard"
                        android:onClick="showSoftKeyboard"
                        app:tint="@color/colorAccent"
                        android:src="@drawable/ic_keyboard_dynamic_128dp" />

                    <EditText
                        android:id="@+id/editTextControlKeyboardImmediately"
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:hint="@string/send_text_placeholder"
                        android:importantForAutofill="no"
                        android:inputType="textFilter|textMultiLine"
                        android:visibility="visible"
                        tools:ignore="UnusedAttribute" />
                </LinearLayout>

                <EditText
                    android:id="@+id/editTextControlKeyboardText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/send_text_placeholder"
                    android:importantForAutofill="no"
                    android:inputType="textMultiLine|textFilter"
                    android:visibility="gone"
                    tools:ignore="UnusedAttribute" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <Button
                            android:layout_width="0dp"
                            android:layout_height="70dp"
                            android:layout_weight="1"
                            android:onClick="sendEscape"
                            android:textStyle="bold"
                            android:textColor="@color/colorIcon"
                            android:text="@string/escape_key" />

                        <ImageButton
                            android:layout_width="0dp"
                            android:layout_height="70dp"
                            android:layout_weight="1"
                            android:contentDescription="@string/up_arrow_key"
                            android:onClick="sendUp"
                            app:tint="@color/colorIcon"
                            android:src="@drawable/ic_keyboard_arrow_up_dynamic_48dp" />

                        <Button
                            android:id="@+id/buttonSendText"
                            style="@style/Widget.AppCompat.Button.Colored"
                            android:layout_width="0dp"
                            android:layout_height="70dp"
                            android:layout_weight="1"
                            android:onClick="sendMessageFromTextBox"
                            android:text="@string/send"
                            android:visibility="invisible" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <ImageButton
                            android:layout_width="0dp"
                            android:layout_height="70dp"
                            android:layout_weight="1"
                            android:contentDescription="@string/left_arrow_key"
                            android:onClick="sendLeft"
                            app:tint="@color/colorIcon"
                            android:src="@drawable/ic_keyboard_arrow_left_dynamic_48dp" />

                        <ImageButton
                            android:layout_width="0dp"
                            android:layout_height="70dp"
                            android:layout_weight="1"
                            android:contentDescription="@string/down_arrow_key"
                            android:onClick="sendDown"
                            app:tint="@color/colorIcon"
                            android:src="@drawable/ic_keyboard_arrow_down_dynamic_48dp" />

                        <ImageButton
                            android:layout_width="0dp"
                            android:layout_height="70dp"
                            android:layout_weight="1"
                            android:contentDescription="@string/right_arrow_key"
                            android:onClick="sendRight"
                            app:tint="@color/colorIcon"
                            android:src="@drawable/ic_keyboard_arrow_right_dynamic_48dp" />
                    </LinearLayout>
                </LinearLayout>

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="24dp" />

                <LinearLayout
                    style="?android:attr/buttonBarStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <Button
                        style="?android:attr/buttonBarButtonStyle"
                        android:layout_width="0dp"
                        android:layout_height="70dp"
                        android:layout_weight="1"
                        android:onClick="sendF1"
                        android:text="@string/f1" />

                    <Button
                        style="?android:attr/buttonBarButtonStyle"
                        android:layout_width="0dp"
                        android:layout_height="70dp"
                        android:layout_weight="1"
                        android:onClick="sendF2"
                        android:text="@string/f2" />

                    <Button
                        style="?android:attr/buttonBarButtonStyle"
                        android:layout_width="0dp"
                        android:layout_height="70dp"
                        android:layout_weight="1"
                        android:onClick="sendF3"
                        android:text="@string/f3" />

                    <Button
                        style="?android:attr/buttonBarButtonStyle"
                        android:layout_width="0dp"
                        android:layout_height="70dp"
                        android:layout_weight="1"
                        android:onClick="sendF4"
                        android:text="@string/f4" />
                </LinearLayout>

                <LinearLayout
                    style="?android:attr/buttonBarStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <Button
                        style="?android:attr/buttonBarButtonStyle"
                        android:layout_width="0dp"
                        android:layout_height="70dp"
                        android:layout_weight="1"
                        android:onClick="sendF5"
                        android:text="@string/f5" />

                    <Button
                        style="?android:attr/buttonBarButtonStyle"
                        android:layout_width="0dp"
                        android:layout_height="70dp"
                        android:layout_weight="1"
                        android:onClick="sendF6"
                        android:text="@string/f6" />

                    <Button
                        style="?android:attr/buttonBarButtonStyle"
                        android:layout_width="0dp"
                        android:layout_height="70dp"
                        android:layout_weight="1"
                        android:onClick="sendF7"
                        android:text="@string/f7" />

                    <Button
                        style="?android:attr/buttonBarButtonStyle"
                        android:layout_width="0dp"
                        android:layout_height="70dp"
                        android:layout_weight="1"
                        android:onClick="sendF8"
                        android:text="@string/f8" />
                </LinearLayout>

                <LinearLayout
                    style="?android:attr/buttonBarStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <Button
                        style="?android:attr/buttonBarButtonStyle"
                        android:layout_width="0dp"
                        android:layout_height="70dp"
                        android:layout_weight="1"
                        android:onClick="sendF9"
                        android:text="@string/f9" />

                    <Button
                        style="?android:attr/buttonBarButtonStyle"
                        android:layout_width="0dp"
                        android:layout_height="70dp"
                        android:layout_weight="1"
                        android:onClick="sendF10"
                        android:text="@string/f10" />

                    <Button
                        style="?android:attr/buttonBarButtonStyle"
                        android:layout_width="0dp"
                        android:layout_height="70dp"
                        android:layout_weight="1"
                        android:onClick="sendF11"
                        android:text="@string/f11" />

                    <Button
                        style="?android:attr/buttonBarButtonStyle"
                        android:layout_width="0dp"
                        android:layout_height="70dp"
                        android:layout_weight="1"
                        android:onClick="sendF12"
                        android:text="@string/f12" />
                </LinearLayout>
            </LinearLayout>
        </ScrollView>

        <LinearLayout
            android:id="@+id/linearLayoutControlDefaults"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:visibility="visible">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/buttonPrev"
                    android:layout_width="90dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:contentDescription="@string/page_up"
                    app:tint="@color/colorIcon"
                    android:src="@drawable/ic_navigate_before_dynamic_48dp"
                    tools:ignore="NestedWeights" />

                <ImageButton
                    android:id="@+id/buttonSpotlight"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="35"
                    android:contentDescription="@string/show_pointer"
                    app:tint="@color/colorIcon"
                    android:src="@drawable/ic_filter_center_focus_dynamic_24dp" />

                <ImageButton
                    android:id="@+id/buttonNext"
                    android:layout_width="90dp"
                    android:layout_height="match_parent"
                    android:layout_weight="10"
                    android:contentDescription="@string/page_down"
                    app:tint="@color/colorIcon"
                    android:src="@drawable/ic_navigate_next_dynamic_48dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="10"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/buttonTouchpad"
                    style="@style/Widget.AppCompat.Button"
                    android:textStyle="bold"
                    android:textColor="@color/colorIcon"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/touchpad" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <ImageButton
                    android:id="@+id/buttonMouseLeft"
                    android:layout_width="90dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:contentDescription="@string/mouse_click_left"
                    app:tint="@color/colorIcon"
                    android:src="@drawable/ic_mouse_dynamic_24dp"
                    tools:ignore="NestedWeights" />

                <ImageButton
                    android:id="@+id/buttonMouseRight"
                    android:layout_width="90dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:contentDescription="@string/mouse_click_right"
                    app:tint="@color/colorIcon"
                    android:src="@drawable/ic_mouse_dynamic_24dp" />
            </LinearLayout>

            <!--
                    <systems.sieber.remotespotlight.DemoView
                        android:layout_width="match_parent"
                        android:id="@+id/view_demo"
                        android:layout_column="0"
                        android:layout_row="1" />
            -->
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
